--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,20 @@
-html,
 body {
-  position: fixed;
+  background-color: #000;
+  background-image: url("img/noise@2x.png");
+  background-size: 1024px 768px;
 }
 
-body {
-  background-color #000:
-}
-
-body * {
-  box-sizing: border-box;
-}
 
 .App {
-  //width: 100vw;
-  //height: 100vh;
-  //overflow-y: scroll;
-  //-webkit-overflow-scrolling: touch;
-  //background-attachment: scroll;
+  
 }
 
 // leftover from create-react-app
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /*
+     animation: App-logo-spin infinite 20s linear;
+     height: 80px;
+   */
 }
 
 @keyframes App-logo-spin {
@@ -30,36 +22,29 @@ body * {
   to { transform: rotate(360deg); }
 }
 
+// shimmer effect -- uncomment last two lines
 .Sea {
-  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
   top: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  background-image: url("img/noise.png");
-  background-attachment: local;
+  // background-image: url("img/dither-1.png");
+  // animation: Background-morph infinite 0.5s linear;
 }
 
-.Mask {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  //height: 100vh;
-  // opacity: 0.8;
-  // background-color: cyan;
-  clip-path: inset(63px 16px 16px 16px);
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+@keyframes Background-morph {
+  from { background-position: top left; }
+  25% { background-position: top left 1px; } 
+  50% { background-position: top 1px left 1px; } 
+  75% { background-position: top 1px left 2px; } 
+  to { background-position: top 2px left 2px; }
 }
 
 .World {
   height: 48px;
-  width: 288px;
+  width: calc(100vw - 32px);
   position: fixed;
-  display: block;
-  top: 16px;
+  top: 0px;
   left: 16px;
   border: 1px solid #000;
   background-color: #fff;
@@ -67,30 +52,29 @@ body * {
 }
 
 .Container {
-  width: 288px;
+  width: calc(100vw - 32px);
   position: relative;
-  margin: 0 16px 80px 16px;
-  padding: 63px 8px 8px 8px;
-  //height: calc(100vh - 80px);
+  top: 63px;
+  left: 16px;
+  padding: 0 48px 6px 8px;
   background-color: #fff;
-  border-right: 1px solid #000;
-  border-bottom: 1px solid #000;
-  border-left: 1px solid #000;
-  background-image: url("img/dither-1.png");
+  border: 1px solid #000;
+  background-image: url("img/dither-1@2x.png");
+  background-size: 16px;
   background-repeat: repeat;
   background-position: top 1px left;
   background-attachment: local;
-  overflow-y: scroll;
   // animation: Container-breathe infinite 1s linear;
+ 
 }
 
-.Lid {
+.Moon {
+  width: 48px;
+  height: 48px;
   position: fixed;
-  top: 63px;
-  left: 16px;
-  display:block;
-  width: 288px;
-  border-top: 1px solid #000;
+  right: 16px;
+  bottom: 16px;
+  background-color: #000;
 }
 
 @keyframes Container-breathe {
@@ -101,9 +85,9 @@ body * {
 
 .DataHeading {
   background-color: #fff;
-  height: 13px;
+  height: 14px;
   display: inline-block;
-  margin: 5px 0 0 20px;
+  margin: 5px 0 -1px 20px;
   padding: 6px 6px 0 6px;
 }
 
@@ -126,27 +110,76 @@ body * {
 }
 
 .Card {
-  width: 100%;
   background-color: #fff;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border-radius: 24px;
   padding: 24px 40px 24px 24px;
+  margin-bottom: 2px;
+  animation: Card-release 0.3s ease-out;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes Card-release {
+  from { border-radius: 24px; }
+  to { border-radius: 12px; }
+}
+
+.Card:hover {
+  animation: Card-squeeze 0.1s linear forwards;
+}
+
+@keyframes Card-squeeze {
+  from { border-radius: 12px; }
+  to { border-radius: 24px; }
+}
+
+.Card:active {
+  /*   background-color: #000; */
+  animation: Card-blacken 0.4s ease-out alternate;
+}
+
+@keyframes Card-blacken {
+  from {
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border-radius: 24px;
+    background-color: #fff;
+  }
+  to {
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    background-color: #000;
+  }
 }
 
 .Card h3 {
-  margin: 0;
+  //margin: 0 0 1.6em 0;
+  padding-bottom: 0.4em;
+  display: inline;
+  font-size: 11px;
+  line-height: 16px;
+  font-weight: 700;
+  letter-spacing: 0.3px;
+  border-bottom: 1px solid transparent;
 }
 
-.browser-window-mobile {
-  position: relative;
-  width: 96px;
-  height: 177px;
-  padding: 10px 1px 0 1px;
-  margin: 32px;
-  /*   background-image: url("img/phone-window-4.png"); */
-  background-repeat: no-repeat;
-  background-size: 96px;
+.Card:hover h3 {
+  /*   border-bottom: 1px solid #000; */
+  animation: Heading-underline 0.1s 1 ease-in forwards;
+}
+
+@keyframes Heading-underline {
+  from { border-color: transparent; }
+  to { border-color: #000; }
+}
+
+.Card p {
+  font-size: 9px;
+  line-height: 11px;
+  letter-spacing: 0.3px;
 }
 
 .browser-window-background {
@@ -176,4 +209,26 @@ body * {
   background-image: url("img/dither-1.png");
   background-repeat: repeat;
   background-position: right 1px top 1px;
+}
+
+/* UTILITY CLASSES */
+
+.Button {
+  display: block;
+  text-decoration: none;
+  color: #000;
+}
+
+/*
+ MEDIA QUERIES 
+ */
+
+@media screen and (min-width: 400px) {
+  .World, .Container {
+    width: 368px;
+  }
+  
+  .Container {
+    padding: 0 8px 6px 8px;
+  }
 }
