--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@ body {
 
 
 .App {
-  
+  /* add extra padding to account for relative positioning of container */
+  padding-bottom: calc(79px + 64px);
 }
 
 // leftover from create-react-app
@@ -56,7 +57,7 @@ body {
   position: relative;
   top: 63px;
   left: 16px;
-  padding: 0 48px 6px 8px;
+  padding: 0 8px 6px 8px;
   background-color: #fff;
   border: 1px solid #000;
   background-image: url("img/dither-1@2x.png");
@@ -68,13 +69,24 @@ body {
  
 }
 
-.Moon {
+.Moon, .Shadow {
   width: 48px;
   height: 48px;
   position: fixed;
   right: 16px;
   bottom: 16px;
+  /*   background-color: #000; */
+  
+}
+
+.Moon {
+  background-image: url("img/dither-3@2x.png");
+  background-size: 16px;
+}
+
+.Shadow {
   background-color: #000;
+  content: "";
 }
 
 @keyframes Container-breathe {
@@ -137,7 +149,7 @@ body {
 
 .Card:active {
   /*   background-color: #000; */
-  animation: Card-blacken 0.4s ease-out alternate;
+  animation: Card-blacken 0.1s linear alternate;
 }
 
 @keyframes Card-blacken {
