--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000;
+  /*   background-color: #000; */
   background-image: url("img/noise.png");
   background-size: 1024px;
 }
@@ -189,6 +189,14 @@ body {
   font-size: 9px;
   line-height: 11px;
   letter-spacing: 0.3px;
+}
+
+.Directory {
+  display: none;
+}
+
+.Expanded .Directory {
+  display: block;
 }
 
 .browser-window-background {
