--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
+
 body {
   /*   background-color: #000; */
   background-image: url("img/noise.png");
@@ -7,7 +9,11 @@ body {
 
 .App {
   min-width: 100vw;
-  min-height: 100vh;
+  /*   min-height: 100vh; */
+}
+
+.projectsWrapper {
+  overflow: hidden visible;
 }
 
 // leftover from create-react-app
@@ -41,63 +47,6 @@ body {
   to { background-position: top 2px left 2px; }
 }
 
-.Void {
-  display: block;
-  width: 100vw;
-  height: 100vh;
-  background: #fff;
-  
-}
-
-.World {
-  height: 48px;
-  width: 48px;
-  position: fixed;
-  z-index: 200;
-  background-color: #fff;
-  top: 80px;
-  left: 80px;
-  background-image: url("img/icon-world.png");
-  background-size: 32px;
-  background-repeat: no-repeat;
-  background-position: 7px 7px;
-}
-
-.World.expanded, .World.collapsed {
-  border: 1px solid #000;
-}
-
-.World.expanded {
-  width: calc(100vw - 32px);
-  top: 0px;
-  left: 16px;
-}
-
-.World.collapsed {
-  top: 0px;
-  left: 0px;
-}
-
-.Container {
-  width: calc(100vw - 32px);
-  position: relative;
-  top: 64px;
-  left: 16px;
-  padding: 0 8px 2px 8px;
-  border: 1px solid #000;
-  background: #fff url("img/dither-1.png") repeat;
-  background-size: 16px;
-  background-position: top 1px left;
-  background-attachment: local;
-  // animation: Container-breathe infinite 1s linear;
-  z-index: 0;
-  margin-bottom: 64px;
-}
-
-.Container.hidden {
-  left: -400px;
-}
-
 .Moon, .Shadow {
   width: 48px;
   height: 48px;
@@ -119,266 +68,11 @@ body {
   z-index: -1;
 }
 
-@keyframes Container-breathe {
-  from { width: 288px; }
-  50% { width: 296px; }
-  to { width: 288px; }
+
+@media screen and (min-width: 769px) {
+  
 }
 
-.DataHeading {
-  background-color: #fff;
-  height: 14px;
-  display: inline-block;
-  margin: 5px 0 -1px 20px;
-  padding: 6px 6px 0 6px;
-}
-
-.DataHeading * {
-  font-size: 8px;
-  line-height: 2px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-weight: 100;
-  margin: 0;
-  position: relative;
-  top: 2px;
-}
-
-/* ######### */
-/* # CARDS # */
-/* ######### */
-
-.Card {
-  position: relative;
-  background-color: #fff;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  padding: 24px;
-  margin-bottom: 6px;
-}
-
-.Card:hover {
-  transition:
-    -webkit-border-radius 0.1s ease-out,
-    -moz-border-radius 0.1s ease-out,
-    border-radius 0.1s ease-out;
-  -webkit-border-radius: 24px;
-  -moz-border-radius: 24px;
-  border-radius: 24px;
-}
-
-.Card.expanded {
-  padding-bottom: 48px;
-}
-
-/* CARD TYPE STYLES */
-
-.Card h3 {
-  //margin: 0 0 1.6em 0;
-  padding-bottom: 0.2em;
-  display: inline;
-  font-size: 11px;
-  line-height: 13px;
-  font-weight: 700;
-  letter-spacing: 0.3px;
-  border-bottom: 1px solid transparent;
-}
-
-.Card:hover h3 {
-  /*   border-bottom: 1px solid #000; */
-  animation: Heading-underline 0.1s 1 ease-in forwards;
-}
-
-@keyframes Heading-underline {
-  from { border-color: transparent; }
-  to { border-color: #000; }
-}
-
-.Card p {
-  font-size: 9px;
-  line-height: 11px;
-  letter-spacing: 0.3px;
-}
-
-.Card.expanded .excerpt, .ProjectList h4 {
-  margin-left: 32px;
-}
-
-/* FOLDER ICON | DOTTED LINE */
-.CollectionButton {
-  background-size: 32px;
-  background-repeat: no-repeat;
-  height: 32px;
-}
-
-.CollectionButton, .ProjectList::before {
-  display: block;
-  position: absolute;
-  top: 24px;
-  left: 16px;
-  width: 32px;
-}
-
-.Icon-folder {
-  background-image: url("img/icon-folder.png");
-}
-
-.ProjectList::before {
-  content: "";
-  height: calc(100% - 24px - 56px);
-  background: url("img/dither-1-vertical-line.png") repeat-y;
-  background-size: 1px;
-  background-position: 8px 0;
-  animation: Marching-dots 1s infinite step-end;
-}
-
-@keyframes Marching-dots {
-  from {
-    background-position: 8px 0;
-  }
-  25% {
-    background-position: 8px 1px;
-  }
-  50% {
-    background-position: 8px 2px;
-  }
-  75% {
-    background-position: 8px 3px;
-  }
-  to {
-    background-position: 8px 4px;
-  }
-}
-
-/* ############ */
-/* # PROJECTS # */
-/* ############ */
-
-.ProjectList {
-  display: none;
-}
-
-.Card.expanded .ProjectList {
-  display: block;
-  width: calc(100vw - 113px);
-}
-
-.Card.expanded .ProjectList > ul {
-  display: block;
-  -webkit-border-radius: 8px;
-  -webkit-border-top-left-radius: 0;
-  -moz-border-radius: 8px;
-  -moz-border-radius-topleft: 0;
-  border-radius: 8px;
-  border-top-left-radius: 0;
-  background: url("img/dither-1.png") repeat;
-  background-size: 16px;
-  margin-left: 0;
-  padding: 1px 2px 1px 8px;
-}
-
-.Project {
-  width: 100%;
-  background-color: #fff;
-  padding: 16px 16px 20px 24px;
-}
-
-.Project.selected {
-  width: 48px;
-  height: 48px;
-  overflow: hidden;
-  padding: 0;
-}
-
-.Project.selected * {
-  display: none;
-}
-
-.Project:hover {
-  transition:
-    -webkit-border-radius 0.1s ease-out,
-    -moz-border-radius 0.1s ease-out,
-    border-radius 0.1s ease-out;
-  -webkit-border-radius: 32px;
-  -moz-border-radius: 32px;
-  border-radius: 32px;
-}
-
-.Project, .Project.selected::before {
-  display: block;
-  margin: 2px 0 1px 0;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-}
-
-/* animation placeholder for project */
-.Project.selected::before {
-  background-color: #fff;
-  position: fixed;
-  content: "";
-  margin-top: 0;
-  width: 48px;
-  height: 48px;
-}
-
-.Container.hidden .Project.selected::before {
-  top: 64px;
-  left: 16px;
-  height: calc(100% - 80px);
-  width: calc(100% - 32px);
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  border: 1px solid #000;
-}
-
-.ProjectList h4 {
-  margin-top: 16px;
-  margin-bottom: 24px;
-  font-weight: 100;
-  font-size: 8px;
-  line-height: 9px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.Project h5 {
-  margin-top: 0;
-  margin-bottom: 8px;
-  font-size: 10px;
-  font-weight: 400;
-  letter-spacing: 0.4px;
-  line-height: 13px
-}
-
-.TagList li {
-  display: inline-block;
-  width: 32px;
-  height: 32px;
-  background-size: 32px;
-}
-
-.Icon-ux {
-  background-image: url("img/icon-ux.png");
-}
-
-.Icon-code {
-  background-image: url("img/icon-code.png");
-}
-
-.Icon-graphic {
-  background-image: url("img/icon-graphic.png");
-}
-
-.Icon-sound {
-  background-image: url("img/icon-sound.png");
-}
-
-.Icon-studio {
-  background-image: url("img/icon-studio.png");
-}
 
 /* ################ */
 /* # PROJECT VIEW # */
@@ -391,15 +85,6 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 16px;
-}
-
-.ProjectPage {
-  background: #fff;
-  border: 1px solid #000;
-  margin-bottom: 64px;
-  position: relative;
-  padding: 40px;
-  /*   left: -100px; */
 }
 
 .PreviousButton, .NextButton {
@@ -433,14 +118,6 @@ body {
   transform: rotate(90deg);
 }
 
-/* PROJECT PAGE TYPE STYLES */
-
-.ProjectPage p {
-  font-size: 9px;
-  line-height: 11px;
-  letter-spacing: 0.3px;
-}
-
 /* SCROLLING WEBSITE THUMBNAIL */
 
 .browser-window-background {
@@ -466,39 +143,47 @@ body {
   background-position: 0 0;
 }
 
-/* UTILITY CLASSES */
-
-.Button {
-  display: block;
-  text-decoration: none;
-  color: #000;
+/* ICONS */
+.World {
+  background-image: url("img/icon-world.png");
 }
 
-/* ################# */
-/* # MEDIA QUERIES # */
-/* ################# */
-
-/* LAYOUT */
-
-@media screen and (min-width: 420px) {
-  .World.expanded, .Container {
-    width: 388px;
-  }
-  
-  .Card.expanded .ProjectList {
-    width: calc(100% - 12px);
-  }
-
-  .Project {
-    width: 300px; 
-  }
-
-  .Container.hidden .Project.selected::before {
-    width: calc(420px - 32px);
-  }
+.Icon-folder {
+  background-image: url("img/icon-folder.png");
 }
 
-/* HD IMAGES FOR HD SCREENS */
+.Icon-ux {
+  background-image: url("img/icon-ux.png");
+}
+
+.Icon-code {
+  background-image: url("img/icon-code.png");
+}
+
+.Icon-graphic {
+  background-image: url("img/icon-graphic.png");
+}
+
+.Icon-sound {
+  background-image: url("img/icon-sound.png");
+}
+
+.Icon-studio {
+  background-image: url("img/icon-studio.png");
+}
+
+/* DITHER PATTERNS */
+.ProjectNav, .ProjectList > ul {
+  background-image: url("img/dither-1.png");
+}
+
+.ProjectList::before {
+  background-image: url("img/dither-1-vertical-line@2x.png");
+}
+
+/* ############################ */
+/* # HD IMAGES FOR HD SCREENS # */
+/* ############################ */
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 1.25),
@@ -512,23 +197,23 @@ only screen and ( min-resolution: 1.25dppx)
     background:url("img/noise@2x.png") repeat;
     background-size: 1024px;
   }
-
-  .Container, .Card.expanded .ProjectList > ul {
-    background-image: url("img/dither-1@2x.png");
+  
+  .ProjectNav, .ProjectList > ul {
+    background: url("img/dither-1@2x.png") repeat;
   }
-
+  
   .World {
-    background-image: url("img/icon-world@2x.png")
+    background-image: url("img/icon-world@2x.png");
   }
   
   .Moon {
     background-image: url("img/dither-2@2x.png");
   }
-
+  
   .Shadow {
     background-image: url("img/dither-5@2x.png");
   }
-
+  
   .Icon-ux {
     background-image: url("img/icon-ux@2x.png");
   }
@@ -549,7 +234,11 @@ only screen and ( min-resolution: 1.25dppx)
     background-image: url("img/icon-studio@2x.png");
   }
 
+  .Icon-folder {
+    background-image: url("img/icon-folder@2x.png");
+  }
+
   .ProjectList::before {
-    background-image: url("img/icon-folder@2x.png") no-repeat, url("img/dither-1-vertical-line@2x.png");
+    background-image: url("img/dither-1-vertical-line@2x.png");
   }
 }
