--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -13,6 +14,18 @@ body {
   box-sizing: inherit;
 }
 
+h1 {
+  font-weight: 600;
+  letter-spacing: 0.8px;
+}
+
+p {
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.3px;
+  max-width: 400px;
+}
+
 ul {
   padding: 0;
   margin: 0;
@@ -20,4 +33,8 @@ ul {
 
 li {
   list-style: none;
+}
+
+article img {
+  max-width: 100%;
 }
