--- a/src/components/World.css
+++ b/src/components/World.css
@@ -241,7 +241,7 @@
   top: 160px;
   padding: 0 16px;
   left: calc(50vw - 110px); 
-  height: calc(100vh - 6px;)
+  height: calc(100vh - 6px);
 }
 
 @media screen and (min-width: 400px) {
